# Franken

./: .gitignore  GENERALIZE_PROGRESS.md  README.md  lint.sh  main.py  pyproject.toml
configs/: default.yaml  fhe_full.yaml  fhe_gelu.yaml  quad.yaml  quad_cgf_fhe.yaml  quad_fhe.yaml
configs/bert/: default.yaml  fhe_full.yaml  fhe_gelu.yaml  quad.yaml  quad_cgf_fhe.yaml  quad_fhe.yaml
configs/qwen3/: .gitkeep
franken/: __init__.py  cli.py  config.py  paths.py  teacher.py
franken/data/: __init__.py  mrpc.py
franken/distill/: __init__.py  layer_map.py  loss.py  trainer.py
franken/model/: __init__.py  attention.py  bert.py  embeddings.py  encoder.py  ffn.py  layer.py  loader.py
franken/models/: __init__.py  base.py
franken/models/bert/: attention.py  backend.py  bert.py  config.py  embeddings.py  encoder.py  ffn.py  layer.py
franken/models/qwen3/: __init__.py  backend.py  config.py
franken/ops/: __init__.py
franken/tasks/: __init__.py  base.py  embed.py  mrpc.py
scripts/: act_range.py  evaluate.py  seed_sweep.py  stage_distill.py
scripts/bert/: act_range.py  evaluate.py  seed_sweep.py
thor/: README.md  analyze_results.py  distilled-model  lint.sh  measure_ranges.py  pyproject.toml
thor/src/thor/: data_encoder.py  encode_weights.py  forward.py  forward_batch.py  he.py  model_config.py  model_encoder.py  paths.py  timer.py  utils.py
