[project]
name = "franken"
version = "0.1.0"
description = "Knowledge-distillation framework for HE-friendly BERT students"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "accelerate>=1.14.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["franken"]

[tool.ruff.lint]
extend-select = ["B", "E501", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
